enum CategoryName {
  harmless,
  delicate,
  offensive,
  internal,
}
